// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VM can export params 1`] = `
Array [
  MonoParam {
    "defaultValue": 0.5,
    "id": Token {
      "0": "e",
      "1": "x",
      "2": "p",
      "3": "o",
      "4": "r",
      "5": "t",
      "6": "/",
      "7": "f",
      "8": "/",
      "9": "x",
      "group": "ids",
    },
    "maxValue": 1,
    "minValue": 0,
    "name": "export/f/x",
    "normalValue": 0.5,
    "scaleValue": 1,
  },
]
`;

exports[`VM hot swap can hot swap with complex code 1`] = `
Array [
  0,
  -0.0000025613701382098952,
  0,
  0.000007671917046536691,
  0.000020442319510038942,
  0.0000383023070753552,
  0.00006123958883108571,
  0.00008924354187911376,
  0.00012229979620315135,
  0.00016040295304264873,
]
`;

exports[`VM hot swap can hot swap with complex code 2`] = `
Array [
  0,
  -0.0000025613701382098952,
  0,
  0.000007671410457987804,
  0.000020442319510038942,
  0.0000383023070753552,
  0.00006123857019701973,
  0.000089241199020762,
  0.00012229979620315135,
  0.00016040295304264873,
]
`;
